AnalisadorLexico/conversor.jj

options {
  STATIC = false;
}

PARSER_BEGIN(Conversor)


public class Conversor {

    final static String Version = "0.0.1";

    public static void main(String args[]) throws ParseException, TokenMgrError {
        Conversor interpreter = new Conversor(System.in);
        interpreter.Start();
    }
}

PARSER_END(Conversor)

SKIP: { " " | "\t" | "\r" }

SKIP: {
    "/*": multilinecomment
}

<multilinecomment> SKIP: {
    "*/": DEFAULT | <~[]>
}

TOKEN: {
    <NUMBER: <DIGITS>
           | <LETTERS>
           | <DIGITS> <LETTERS>
           | <LETTERS> <DIGITS>
    >
}

TOKEN: {
    < DIGITS: (["0" - "9"])+ >
}

TOKEN : {
    < LETTERS: (["A" - "F"])+ >
}

TOKEN: {
    < EOL: "\n" | "\r" | "\r\n"  >
}

void Start() :
{
    String valor;
}
{
    (
        valor = ConversorHexa()
        <EOL>
        {
            System.out.println(valor);
        }
    )*

    <EOF>
}

/*String [] Conversor() :
{
    String valorBinario;
    String valorOctal;
    String valorHexa;
    String accumulador [] = new String[3];
}
{

    {
        valorBinario = ConversorBinario();
        valorOctal = ConversorOctal();
        valorHexa = ConversorHexa();
        accumulador[0] = valorBinario;
        accumulador[1] = valorOctal;
        accumulador[2] = valorHexa;
    }
    {
        return accumulador;
    }

}*/

String ConversorBinario () :
{
    Token t;
    String accumulador;
}
{
    t = <NUMBER>
    {
        int entrada = Integer.parseInt(t.image);
        int cont = 0;
        int base = 2;
        java.util.List<Integer> restos = new java.util.ArrayList();
        while(entrada >= base) {
            restos.add(entrada%base);
            entrada = entrada/base;
            cont++;
        }
        String resposta = String.valueOf(entrada);
        for (int i = restos.size()-1; i >= 0; i--) {
            resposta += String.valueOf(restos.get(i));
        }
        accumulador = resposta;
    }

    {
        return accumulador;
    }
}

String ConversorOctal () :
{
    Token t;
    String accumulador;
}
{
    t = <NUMBER>
    {
        int entrada = Integer.parseInt(t.image);
        int cont = 0;
        int base = 8;
        java.util.List<Integer> restos = new java.util.ArrayList();
        while(entrada >= base) {
            restos.add(entrada%base);
            entrada = entrada/base;
            cont++;
        }
        String resposta = String.valueOf(entrada);
        for (int i = restos.size()-1; i >= 0; i--) {
            resposta += String.valueOf(restos.get(i));
        }
        accumulador = resposta;
    }

    {
        return accumulador;
    }
}

String ConversorHexa () :
{
    Token t;
    String accumulador;
}
{
    t = <NUMBER>
    {
        int entrada = Integer.parseInt(t.image);
        int base = 16;
        java.util.List<String> restos = new java.util.ArrayList<String>();
        while(entrada >= base) {
            int resto = entrada%base;
            if (resto > 9) {
                restos.add(RetornaLetraHexa(resto));
            }
            else {
                restos.add(String.valueOf(resto));
            }
            entrada = entrada/base;
        }
        String resposta = "";
        if(entrada > 9) {
            resposta = RetornaLetraHexa(entrada);
        }
        else {
            resposta = String.valueOf(entrada);
        }
        for (int i = restos.size()-1; i >= 0; i--) {
            resposta += restos.get(i);
        }
        accumulador = resposta;
    }
    {
        return accumulador;
    }
}

String RetornaLetraHexa (int numero) :
{
    Token t;
}
{
    {
        String letra = "";
        switch (numero) {
            case 10: letra = "A"; break;
            case 11: letra = "B"; break;
            case 12: letra = "C"; break;
            case 13: letra = "D"; break;
            case 14: letra = "E"; break;
            case 15: letra = "F"; break;
        }
        return letra;
    }
}
